--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="horizontal" >
     
-    <!-- 
     <EditText
         android:id="@+id/edit_search"
         android:layout_weight="1"
@@ -17,14 +16,5 @@
         android:layout_height="wrap_content"
         android:text="@string/button_search" 
         android:onClick="doQuery"/>
-    
-     -->
-     
-     <fragment android:name="net.nakama.duckdroid.fragments.SearchFragment"
-              android:id="@+id/search_fragment"
-              android:layout_weight="1"
-              android:layout_width="0dp"
-              android:layout_height="match_parent" />
-    
 
 </LinearLayout>
