--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,4 +2,14 @@
 
     <style name="AppTheme" parent="android:Theme.Light" />
 
+    <style name="myButton">
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:layout_marginRight">2dp</item>
+        <item name="android:minWidth">130px</item>
+    </style>
+    
 </resources>
