--- a/res/menu/activity_duckdroid.xml
+++ b/res/menu/activity_duckdroid.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
+    <item android:id="@+id/menu_search"
+          android:title="search"
+          android:icon="@drawable/ic_action_search"
+          android:showAsAction="always"
+          android:actionViewClass="android.widget.SearchView"
+           />
+    
+    <item android:id="@+id/menu_settings_s"
         android:title="@string/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
