--- a/res/layout/activity_duckdroid.xml
+++ b/res/layout/activity_duckdroid.xml
@@ -24,26 +24,32 @@
          
     </LinearLayout>
      -->
-     
-   <LinearLayout android:id="@+id/containerpanel"
-       				android:orientation="horizontal"
-        		  android:layout_width="fill_parent"
-        		  android:layout_height="wrap_content"
-        		  android:baselineAligned="false">
+    
 	    		  
 	   <FrameLayout
             android:id="@+id/leftpane"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".2" />
+            android:layout_weight=".4" />
 	   
+	   <!-- 
         <FrameLayout
             android:id="@+id/rightpane"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1" >
+            
         </FrameLayout>
-        		  
-    </LinearLayout>
+        	 -->
+        	 
+       	<LinearLayout android:id="@+id/rightpane"
+       	    		  android:orientation="vertical"
+       	    		  android:layout_width="0dp"
+    		  android:layout_height="match_parent"
+    		  android:baselineAligned="false"
+    		  android:layout_weight="1">
+       	    
+       	</LinearLayout>	  
+    
     
 </LinearLayout>
