--- a/res/menu/activity_duckdroid.xml
+++ b/res/menu/activity_duckdroid.xml
@@ -1,4 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <item android:id="@+id/menu_loading"
+          android:actionViewClass="android.widget.ProgressBar"
+          android:showAsAction="always"
+          android:visible="false"
+        />
+    
     <item android:id="@+id/menu_search"
           android:title="search"
           android:icon="@drawable/ic_action_search"
