--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="android:Theme.Light" />
+   
 
     <style name="myButton">
         <item name="android:paddingLeft">5dp</item>
@@ -10,6 +10,15 @@
         <item name="android:layout_marginLeft">2dp</item>
         <item name="android:layout_marginRight">2dp</item>
         <item name="android:minWidth">130px</item>
+    </style>
+    
+    <style name="darkactionbar" parent="android:style/Widget.Holo.Light.ActionBar">
+        <item name="android:background">@drawable/action_bg</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+    
+    <style name="Theme.DuckDroid" parent="android:style/Theme.Holo.Light.DarkActionBar">
+    	<item name="android:actionBarStyle">@style/darkactionbar</item>
     </style>
     
 </resources>
