--- a/res/layout/activity_duckdroid.xml
+++ b/res/layout/activity_duckdroid.xml
@@ -30,7 +30,10 @@
             android:id="@+id/leftpane"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".4" />
+            android:layout_weight=".4" 
+    		
+    		
+       />
 	   
 	   <!-- 
         <FrameLayout
@@ -42,14 +45,18 @@
         </FrameLayout>
         	 -->
         	 
-       	<LinearLayout android:id="@+id/rightpane"
-       	    		  android:orientation="vertical"
-       	    		  android:layout_width="0dp"
-    		  android:layout_height="match_parent"
-    		  android:baselineAligned="false"
-    		  android:layout_weight="1">
-       	    
-       	</LinearLayout>	  
+       	<LinearLayout 
+       	    android:id="@+id/rightpane"
+       	    android:orientation="vertical"
+       	    android:layout_width="0dp"
+    		android:layout_height="match_parent"
+    		android:baselineAligned="false"
+    		android:layout_weight="1"
+    		android:paddingTop="3dp"
+    		android:paddingBottom="3dp"
+    		android:paddingLeft="2dp"
+    		android:paddingRight="2dp"
+    	/>	  
     
     
 </LinearLayout>
