--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,8 +5,16 @@
         <item name="android:textSize">12dp</item>
     </style>
     
+    <style name="duckresultlist">
+        <item name="android:headerDividersEnabled">false</item>
+        <item name="android:footerDividersEnabled">true</item>
+        <item name="android:dividerHeight">1dp</item>
+    </style>
+    
     <style name="Theme.DuckDroid" parent="android:style/Theme.Holo.Light.DarkActionBar">
     	<item name="android:actionBarStyle">@style/darkactionbar</item>
     </style>
     
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
