--- a/res/layout/activity_duckdroid.xml
+++ b/res/layout/activity_duckdroid.xml
@@ -1,62 +1,101 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    		  android:orientation="horizontal"
-    		  android:padding="5dp"
-    		  android:layout_width="match_parent"
-    		  android:layout_height="match_parent"
-    		  android:baselineAligned="false">
-    <!-- 	
-    <LinearLayout android:orientation="horizontal"
-        		  android:layout_width="fill_parent"
-        		  android:layout_height="wrap_content">
-        		  
+<RelativeLayout 
+    	xmlns:android="http://schemas.android.com/apk/res/android"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent">
+	
+    <LinearLayout 
+       	    android:id="@+id/lt_searchbar"
+       	    android:orientation="horizontal"
+       	    android:layout_width="match_parent"
+    		android:layout_height="44dp"
+    		android:layout_alignParentTop="true"
+    		android:layout_alignParentLeft="true"
+    		style="@style/ducklayout">
+    	
+        <ImageView android:src="@drawable/ic_launcher"
+            	   android:contentDescription="@string/app_name"
+            	   android:layout_width="wrap_content"
+            	   android:layout_height="match_parent"
+            	   android:paddingLeft="5dp"
+            	   android:paddingRight="5dp" />
+        
+        <ProgressBar android:id="@+id/pb_loading"
+            		 android:visibility="invisible"
+            		 android:layout_width="wrap_content"
+            	   	 android:layout_height="match_parent"/>
+        
         <EditText
-            android:id="@+id/edit_search"
+            android:id="@+id/txt_search"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
+            android:layout_height="match_parent"
             android:layout_weight="1"
+            android:inputType="textShortMessage|textAutoCorrect|textAutoComplete"
+        	android:imeOptions="actionSearch"
             android:hint="@string/edit_search_hint" />
         
-         <Button
-            android:id="@+id/btn_search"
-            android:text="@string/btn_search_text" 
-            style="@style/myButton" />
-         
-    </LinearLayout>
-     -->
-    
-	    		  
-	   <FrameLayout
-            android:id="@+id/leftpane"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".4" 
-    		
-    		
-       />
-	   
-	   <!-- 
-        <FrameLayout
-            android:id="@+id/rightpane"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" >
-            
-        </FrameLayout>
-        	 -->
-        	 
-       	<LinearLayout 
-       	    android:id="@+id/rightpane"
+        <ImageButton android:src="@drawable/action_search"
+            		 android:contentDescription="@string/btn_search_text"
+            		 android:id="@+id/btn_search"
+            		 android:layout_width="wrap_content"
+            	   	 android:layout_height="match_parent"
+            	   	 style="?android:attr/borderlessButtonStyle"
+            	   	 android:paddingLeft="5dp"
+            	   	 android:paddingRight="5dp"
+            	   	 android:onClick="btnSearch" />
+        	
+    </LinearLayout>	 
+       	
+    <LinearLayout 
+       	    android:id="@+id/lt_main"
        	    android:orientation="vertical"
-       	    android:layout_width="0dp"
+       	    android:layout_width="match_parent"
     		android:layout_height="match_parent"
-    		android:baselineAligned="false"
-    		android:layout_weight="1"
-    		android:paddingTop="3dp"
-    		android:paddingBottom="3dp"
-    		android:paddingLeft="2dp"
-    		android:paddingRight="2dp"
+    		android:layout_below="@id/lt_searchbar"
+    		android:layout_alignParentLeft="true"
+    		android:padding="10dp"
+    		android:background="#ededed"
+    		android:layout_marginBottom="40dp"
     	/>	  
     
+    <LinearLayout 
+        android:id="@+id/lt_bottommenu"
+        android:layout_width="fill_parent" 
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+	    android:layout_alignParentLeft="true"
+	    android:background="@drawable/bottom_bar">
+       
+        <Button 	android:drawableLeft="@drawable/duckduckgo"
+            		 android:contentDescription="@string/btn_bang__ddg_desc"
+            		 android:id="@+id/btn_bang_ddg"
+            		 android:layout_width="0dp"
+            	   	 android:layout_height="match_parent"
+            	   	 style="?android:attr/borderlessButtonStyle"
+            	   	 android:text="@string/btn_bang_ddg" 
+            	   	 android:gravity="left|center_vertical"
+            	   	 android:layout_weight="1"
+            	   	 android:onClick="btnBangDdg" />
+        
+        <Button 	android:drawableLeft="@drawable/bang"
+            		 android:contentDescription="@string/btn_bang_desc"
+            		 android:id="@+id/btn_bang"
+            		 android:layout_width="0dp"
+            	   	 android:layout_height="match_parent"
+            	   	 style="?android:attr/borderlessButtonStyle"
+            	   	 android:text="@string/btn_bang" 
+            	   	 android:gravity="left|center_vertical"
+            	   	 android:layout_weight="1" 
+            	   	 android:onClick="btnshowPopupBang"/>
+        
+        <ImageButton android:src="@drawable/action_settings"
+            		 android:contentDescription="@string/title_activity_pref"
+            		 android:id="@+id/btn_setting"
+            		 android:layout_width="wrap_content"
+            	   	 android:layout_height="match_parent"
+            	   	 style="?android:attr/borderlessButtonStyle"
+            	   	 android:onClick="btnshowPopupSetting" />
+        
+    </LinearLayout>
     
-</LinearLayout>
+</RelativeLayout>
