--- a/res/layout/resultrow.xml
+++ b/res/layout/resultrow.xml
@@ -3,15 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     >
     
     <TextView android:id="@+id/text"
          android:textSize="16sp"
          android:layout_width="match_parent"
-         android:layout_height="wrap_content"/>
+         android:layout_height="wrap_content"
+         android:paddingBottom="5dp" />
 
      <TextView android:id="@+id/url"
-         android:textSize="12sp"
+         style="@style/resultlink"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
 
