--- a/res/menu/activity_duckdroid.xml
+++ b/res/menu/activity_duckdroid.xml
@@ -1,20 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    
-    <item android:id="@+id/menu_loading"
-          android:actionViewClass="android.widget.ProgressBar"
-          android:showAsAction="always"
-          android:visible="false"
-        />
-    
-    <item android:id="@+id/menu_search"
-          android:title="search"
-          android:icon="@drawable/ic_action_search"
-          android:showAsAction="always"
-          android:actionViewClass="android.widget.SearchView"
-           />
-    
     <item android:id="@+id/menu_settings_s"
         android:title="@string/menu_settings"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item android:id="@+id/menu_clear_hist"
+        android:title="@string/menu_clear_hist"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
+    <item android:id="@+id/menu_about"
+        android:title="@string/menu_about"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
