--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,8 +11,17 @@
         <item name="android:dividerHeight">1dp</item>
     </style>
     
-    <style name="Theme.DuckDroid" parent="android:style/Theme.Holo.Light.DarkActionBar">
-    	<item name="android:actionBarStyle">@style/darkactionbar</item>
+    <style name="ducklayout">
+        <item name="android:background">@drawable/search_bar_bg</item>
+    </style>
+    
+    <style name="Theme.DuckDroid" parent="android:style/Theme.Holo.Light.NoActionBar">
+    	
+    </style>
+    
+    <style name="resultlink">
+        <item name="android:textSize">11dp</item>
+        <item name="android:textColor">@android:color/holo_blue_light</item>
     </style>
     
     <color name="white">#ffffff</color>
