--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -6,22 +6,29 @@
     android:paddingTop="50dp"
     android:paddingLeft="20dp"
     android:paddingRight="20dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:drawableLeft="@drawable/ic_launcher"
+        android:text="@string/app_name"
+        android:textSize="20dp" />
     
     <TextView android:layout_width="fill_parent"
         	  android:layout_height="wrap_content"
         	  android:text="@string/author" 
-        	  android:paddingTop="20dp"/>
+        	  android:paddingTop="5dp"/>
     
     <TextView android:layout_width="fill_parent"
         	  android:layout_height="wrap_content"
         	  android:text="@string/email" 
-        	  android:paddingTop="20dp"/>
+        	  />
     
-    <TextView android:layout_width="fill_parent"
-        	  android:layout_height="wrap_content"
-        	  android:text="@string/licence"
-        	  android:maxLines="10"
-        	  android:paddingTop="20dp"
-        	   />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="10"
+        android:paddingTop="20dp"
+        android:text="@string/licence" />
 
 </LinearLayout>
