--- a/res/menu/menu_bang_entertainment.xml
+++ b/res/menu/menu_bang_entertainment.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:id="@+id/menu_bang_safeoff"
+          android:title="!safeoff"/>
     <item android:id="@+id/menu_bang_osub"
           android:title="!osub"/>
 	<item android:id="@+id/menu_bang_bakabt"
