--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-    <CheckBoxPreference
-      android:key="pref_history"
-      android:title="@string/pref_history"
-      android:summary="@string/pref_history_summary"
-      android:defaultValue="true"
-    />
+    <PreferenceCategory 
+        android:title="@string/title_preference_history"
+        android:key="pref_cat_history">
+	        
+	    <CheckBoxPreference
+	      android:key="pref_history"
+	      android:title="@string/pref_history"
+	      android:summary="@string/pref_history_summary"
+	      android:defaultValue="true"
+	    />
+	    
+	    <CheckBoxPreference
+	      android:key="pref_safeoff"
+	      android:title="@string/pref_safeoff"
+	      android:summary="@string/pref_safeoff_summary"
+	      android:defaultValue="true"
+	    />
     
-    <CheckBoxPreference
-      android:key="pref_safeoff"
-      android:title="@string/pref_safeoff"
-      android:summary="@string/pref_safeoff_summary"
-      android:defaultValue="true"
-    />
+    </PreferenceCategory>
     
-    <ListPreference
-      android:key="pref_bangprofile"
-      android:title="@string/pref_bangprofile"
-      android:summary="@string/pref_bangprofile_summary"
-      android:entries="@array/pref_bang_list"
-      android:entryValues="@array/pref_bang_list"
-      android:dialogTitle="@string/pref_bangprofile" 
-      android:defaultValue="DuckDroid" />
-    
-    <CheckBoxPreference
-      android:key="pref_bangsubmit"
-      android:title="@string/pref_bangsubmit"
-      android:summary="@string/pref_bangsubmit_summary"
-      android:defaultValue="true"
-    />
+    <PreferenceCategory 
+        android:title="@string/title_preference_bang"
+        android:key="pref_cat_bang">
+	    <ListPreference
+	      android:key="pref_bangprofile"
+	      android:title="@string/pref_bangprofile"
+	      android:summary="@string/pref_bangprofile_summary"
+	      android:entries="@array/pref_bang_list"
+	      android:entryValues="@array/pref_bang_list"
+	      android:dialogTitle="@string/pref_bangprofile" 
+	      android:defaultValue="DuckDroid" />
+	    
+	    <CheckBoxPreference
+	      android:key="pref_bangsubmit"
+	      android:title="@string/pref_bangsubmit"
+	      android:summary="@string/pref_bangsubmit_summary"
+	      android:defaultValue="true"
+	    />
 
+    </PreferenceCategory>
 </PreferenceScreen>
